# wren

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  rust-toolchain.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml
crates/wren-babel/: Cargo.toml
crates/wren-babel/src/: lib.rs  neighbor.rs  table.rs  tlv.rs
crates/wren-bfd/: Cargo.toml
crates/wren-bfd/src/: auth.rs  lib.rs  packet.rs  session.rs
crates/wren-bgp/: Cargo.toml
crates/wren-bgp/src/: attr.rs  bmp.rs  capability.rs  community.rs  decision.rs  ext_community.rs  flowspec.rs  fsm.rs  large_community.rs  lib.rs  message.rs  nexthop.rs  rib.rs  rpki.rs  rtr.rs
crates/wren-config/: Cargo.toml
crates/wren-config/src/: lib.rs
crates/wren-core/: Cargo.toml
crates/wren-core/src/: lib.rs  rd.rs
crates/wren-daemon/: Cargo.toml
crates/wren-daemon/src/: babel.rs  bfd.rs  bfd_echo.rs  bgp.rs  bmp.rs  connected.rs  control.rs  isis.rs  main.rs  metrics.rs  ospf.rs  ospf3.rs  query.rs  rip.rs  ripng.rs  router.rs  rtr.rs  sockopt.rs
crates/wren-filter/: Cargo.toml
crates/wren-filter/src/: lib.rs
crates/wren-isis/: Cargo.toml
crates/wren-isis/src/: adjacency.rs  dis.rs  lib.rs  lsdb.rs  pdu.rs  spf.rs  tlv.rs
crates/wren-netlink/: Cargo.toml
crates/wren-netlink/src/: lib.rs
crates/wren-ospf/: Cargo.toml
crates/wren-ospf/src/: flood.rs  interface.rs  lib.rs  lsa.rs  lsdb.rs  md5.rs  neighbor.rs  packet.rs  spf.rs
crates/wren-ospfv3/: Cargo.toml
crates/wren-ospfv3/src/: flood.rs  interface.rs  lib.rs  lsa.rs  lsdb.rs  neighbor.rs  packet.rs  spf.rs
crates/wren-rip/: Cargo.toml
crates/wren-rip/src/: lib.rs  ng.rs
docs/: book.toml
docs/src/: SUMMARY.md  architecture.md  configuration.md  core.md  getting-started.md  introduction.md  monitoring.md  roadmap.md  vrf.md
docs/src/protocols/: babel.md  bfd.md  bgp.md  isis.md  ospf.md  ospfv3.md  rip.md  static-connected.md
docs/theme/: wren.css
examples/: wren.toml
scripts/: babel-redistribute-smoke.sh  babel-show-smoke.sh  bfd-auth-per-session-smoke.sh  bfd-auth-smoke.sh  bfd-echo-smoke.sh  bgp-4octet-smoke.sh  bgp-add-path-smoke.sh  bgp-aggregate-smoke.sh  bgp-bfd-smoke.sh  bgp-bmp-smoke.sh  bgp-collision-smoke.sh  bgp-community-filter-smoke.sh  bgp-community-smoke.sh  bgp-confederation-smoke.sh  bgp-default-originate-smoke.sh  bgp-export-filter-smoke.sh  bgp-ext-community-smoke.sh  bgp-extended-nexthop-smoke.sh  bgp-graceful-restart-smoke.sh  bgp-import-filter-smoke.sh  bgp-large-community-smoke.sh  bgp-linklocal-nexthop-smoke.sh  bgp-max-prefix-smoke.sh  bgp-metrics-smoke.sh  bgp-mp-ipv6-smoke.sh  bgp-multipath-smoke.sh  bgp-password-smoke.sh  bgp-propagate-ipv6-smoke.sh  bgp-propagate-smoke.sh  bgp-redistribute-smoke.sh  bgp-route-reflection-smoke.sh  bgp-route-refresh-smoke.sh  bgp-rpki-smoke.sh  bgp-rtr-smoke.sh  bgp-show-smoke.sh  bgp-tcp-ao-smoke.sh  bgp-ttl-security-smoke.sh  bgp-unnumbered-smoke.sh  isis-bfd-smoke.sh  isis-database-smoke.sh  (+25 more)
