[package]
name = "wren-config"
description = "Wren routing daemon — TOML configuration model."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
wren-core.workspace = true
serde.workspace = true
toml.workspace = true
