[package]
name = "wren-ospf"
description = "Wren routing daemon — OSPFv2 (RFC 2328): packet/LSA wire codec, link-state database and SPF."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

# Like wren-rip, the protocol logic and wire codec are dependency-free `std`.
# The async socket loop (raw IP proto 89) lives in wren-daemon behind tokio/libc,
# keeping this crate pure and unit-testable.
[dependencies]
wren-core.workspace = true
